[gd_scene load_steps=25 format=3 uid="uid://dtx06y4iw0k62"]

[ext_resource type="Texture2D" uid="uid://dm11j3yfr1uk0" path="res://assets/tileset.png" id="1_rke4c"]
[ext_resource type="PackedScene" uid="uid://cs2pl1l6ynkt6" path="res://scenes/unit.tscn" id="2_8kbpk"]
[ext_resource type="AudioStream" uid="uid://cg3dovnkvi685" path="res://assets/bookOpen.ogg" id="2_j5opk"]
[ext_resource type="Script" path="res://scripts/Camera.gd" id="3_7eanr"]
[ext_resource type="PackedScene" uid="uid://dxk85w7vy2hfx" path="res://scenes/hud.tscn" id="3_gd6nu"]
[ext_resource type="AudioStream" uid="uid://du5xncphcpul2" path="res://assets/unholy_knight.mp3" id="4_k0e4j"]
[ext_resource type="Script" path="res://scripts/GameManager.gd" id="4_teupw"]
[ext_resource type="Texture2D" uid="uid://sn3ol1dxmjr4" path="res://assets/tactics-overlay.png" id="5_1sfwv"]
[ext_resource type="Texture2D" uid="uid://de35wj6gvyhqb" path="res://assets/tiles.png" id="5_tgvw0"]
[ext_resource type="Script" path="res://scripts/LevelMap.gd" id="6_ak6wg"]
[ext_resource type="Script" path="res://scripts/ActionOverlay.gd" id="7_cf01m"]
[ext_resource type="Resource" uid="uid://b1f4lgpoh1t2w" path="res://classes/imperial_guard.tres" id="9_4ilro"]
[ext_resource type="Resource" uid="uid://c3530kaypsr7i" path="res://classes/rogue.tres" id="9_22ed4"]
[ext_resource type="PackedScene" uid="uid://cjs28jaadkqrg" path="res://scenes/cursor.tscn" id="11_de1cw"]
[ext_resource type="Resource" uid="uid://eny3j806oejm" path="res://classes/bard.tres" id="11_vf0dd"]
[ext_resource type="Resource" uid="uid://1gfyq8ki2533" path="res://classes/imperial_marksman.tres" id="13_f25ht"]
[ext_resource type="Resource" uid="uid://damqwulq84fam" path="res://classes/sorcerer.tres" id="14_s4k00"]
[ext_resource type="Resource" uid="uid://cv2bmrn0na33h" path="res://classes/cleric.tres" id="15_orexb"]
[ext_resource type="Resource" uid="uid://dniif3u8hvt8b" path="res://classes/imperial_mage.tres" id="16_cleo6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dm582"]
texture = ExtResource("5_tgvw0")
separation = Vector2i(0, 2)
texture_region_size = Vector2i(132, 130)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -4)
0:0/0/custom_data_0 = true
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -4)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -4)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -4)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, -4)
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, -4)
6:0/0 = 0
6:0/0/texture_origin = Vector2i(0, -4)
6:0/0/custom_data_0 = true
7:0/0 = 0
7:0/0/texture_origin = Vector2i(0, -4)
8:0/0 = 0
8:0/0/texture_origin = Vector2i(0, -4)
9:0/0 = 0
9:0/0/texture_origin = Vector2i(0, -4)
10:0/0 = 0
10:0/0/texture_origin = Vector2i(0, -4)
11:0/0 = 0
11:0/0/texture_origin = Vector2i(0, -4)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vsvau"]
texture = ExtResource("1_rke4c")
separation = Vector2i(1, 0)
texture_region_size = Vector2i(132, 130)
0:0/0 = 0
0:1/0 = 0
0:1/0/custom_data_0 = true
0:2/0 = 0
0:2/0/custom_data_0 = true
0:3/0 = 0
0:3/0/custom_data_0 = true
0:4/0 = 0
0:4/0/custom_data_0 = true
0:5/0 = 0
0:6/0 = 0
0:7/0 = 0
1:0/0 = 0
1:1/0 = 0
1:2/0 = 0
1:2/0/custom_data_0 = true
1:3/0 = 0
1:3/0/custom_data_0 = true
1:4/0 = 0
1:4/0/custom_data_0 = true
1:5/0 = 0
1:6/0 = 0
1:7/0 = 0
2:0/0 = 0
2:1/0 = 0
2:1/0/custom_data_0 = true
2:2/0 = 0
2:2/0/custom_data_0 = true
2:3/0 = 0
2:3/0/custom_data_0 = true
2:4/0 = 0
2:4/0/custom_data_0 = true
2:5/0 = 0
2:5/0/custom_data_0 = true
2:6/0 = 0
2:7/0 = 0
3:0/0 = 0
3:1/0 = 0
3:1/0/custom_data_0 = true
3:2/0 = 0
3:2/0/custom_data_0 = true
3:3/0 = 0
3:3/0/custom_data_0 = true
3:4/0 = 0
3:4/0/custom_data_0 = true
3:5/0 = 0
3:5/0/custom_data_0 = true
3:6/0 = 0
3:7/0 = 0
4:0/0 = 0
4:1/0 = 0
4:1/0/custom_data_0 = true
4:2/0 = 0
4:2/0/custom_data_0 = true
4:3/0 = 0
4:3/0/custom_data_0 = true
4:4/0 = 0
4:4/0/custom_data_0 = true
4:5/0 = 0
4:6/0 = 0
4:7/0 = 0
5:0/0 = 0
5:1/0 = 0
5:1/0/custom_data_0 = true
5:2/0 = 0
5:2/0/custom_data_0 = true
5:3/0 = 0
5:3/0/custom_data_0 = true
5:4/0 = 0
5:5/0 = 0
5:6/0 = 0
5:7/0 = 0
6:0/0 = 0
6:0/0/custom_data_0 = true
6:1/0 = 0
6:1/0/custom_data_0 = true
6:2/0 = 0
6:2/0/custom_data_0 = true
6:3/0 = 0
6:3/0/custom_data_0 = true
6:4/0 = 0
6:4/0/custom_data_0 = true
6:5/0 = 0
6:6/0 = 0
6:7/0 = 0
7:0/0 = 0
7:0/0/custom_data_0 = true
7:1/0 = 0
7:1/0/custom_data_0 = true
7:2/0 = 0
7:2/0/custom_data_0 = true
7:3/0 = 0
7:3/0/custom_data_0 = true
7:4/0 = 0
7:4/0/custom_data_0 = true
7:5/0 = 0
7:6/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_w6s3c"]
tile_shape = 1
tile_layout = 4
tile_size = Vector2i(132, 66)
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
sources/2 = SubResource("TileSetAtlasSource_vsvau")
sources/1 = SubResource("TileSetAtlasSource_dm582")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v4s35"]
texture = ExtResource("5_1sfwv")
texture_region_size = Vector2i(132, 130)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_37cdf"]
tile_shape = 1
tile_layout = 4
tile_size = Vector2i(132, 66)
sources/0 = SubResource("TileSetAtlasSource_v4s35")

[node name="Game" type="Node2D"]

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("enemy_units", "player_units")]
unique_name_in_owner = true
script = ExtResource("4_teupw")
enemy_units = [NodePath("../Enemy"), NodePath("../Enemy3"), NodePath("../Enemy6"), NodePath("../Enemy2"), NodePath("../Enemy4"), NodePath("../Enemy5")]
player_units = [NodePath("../Unit"), NodePath("../Unit2"), NodePath("../Unit3"), NodePath("../Unit4"), NodePath("../Unit5")]

[node name="SelectSound" type="AudioStreamPlayer2D" parent="GameManager"]
stream = ExtResource("2_j5opk")

[node name="HUD" parent="GameManager" instance=ExtResource("3_gd6nu")]

[node name="EnemyTimer" type="Timer" parent="GameManager"]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GameManager"]
stream = ExtResource("4_k0e4j")
autoplay = true
bus = &"Music"

[node name="Camera" type="Camera2D" parent="." node_paths=PackedStringArray("target")]
unique_name_in_owner = true
position_smoothing_enabled = true
script = ExtResource("3_7eanr")
target = NodePath("../Unit")

[node name="LevelMap" type="TileMap" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
tile_set = SubResource("TileSet_w6s3c")
format = 2
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(-65536, 1, 0, -131072, 1, 0, -196608, 1, 0, -131073, 1, 0, -65537, 1, 0, -1, 1, 0, 65536, 1, 0, 0, 393217, 0, -65535, 1, 0, -65534, 1, 0, -131070, 1, 0, -196606, 1, 0, -196607, 1, 0, -131071, 1, 0, 1, 1, 0, 65537, 1, 0, 65538, 1, 0, 2, 327681, 0, -131074, 131073, 0, -65538, 655361, 0, -2, 655361, 0, 65534, 65537, 0, 131070, 262145, 0, 131071, 1, 0, 65535, 1, 0, -131075, 720897, 0, -65539, 655361, 0, -3, 655361, 0, 65533, 196609, 0, 131069, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 65539, 1, 0, 3, 1, 0, -65533, 1, 0, -131069, 458753, 0, -196605, 1, 0, -262141, 393217, 0, -262142, 1, 0, -262143, 1, 0, -262144, 1, 0, -196609, 524289, 0, -196610, 1, 0, -196611, 262145, 0, -262147, 1, 0, -262146, 1, 0, -262145, 1, 0, -327680, 1, 0, -327679, 1, 0, -327678, 327681, 0, -327677, 1, 0, -327676, 1, 0, -262140, 1, 0, -196604, 1, 0, -131068, 1, 0, -65532, 1, 0, 4, 1, 0, 65540, 327681, 0, 131076, 1, 0, 196612, 1, 0, 196611, 524289, 0, 196610, 1, 0, 196609, 1, 0, 196608, 262145, 0, 262143, 1, 0, 262142, 458753, 0, 262141, 1, 0, 262140, 1, 0, 196604, 393217, 0, 131068, 1, 0, 65532, 1, 0, -4, 1, 0, -65540, 1, 0, -131076, 1, 0, -196612, 1, 0, -262148, 1, 0)
script = ExtResource("6_ak6wg")

[node name="ActionOverlay" type="TileMap" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.498039)
y_sort_enabled = true
tile_set = SubResource("TileSet_37cdf")
format = 2
layer_0/y_sort_enabled = true
script = ExtResource("7_cf01m")

[node name="Unit" parent="." instance=ExtResource("2_8kbpk")]
position = Vector2(132, 0)

[node name="Unit2" parent="." instance=ExtResource("2_8kbpk")]
position = Vector2(264, -66)
unit_class = ExtResource("9_22ed4")

[node name="Unit3" parent="." instance=ExtResource("2_8kbpk")]
position = Vector2(132, 66)
unit_class = ExtResource("11_vf0dd")

[node name="Unit4" parent="." instance=ExtResource("2_8kbpk")]
position = Vector2(66, 165)
unit_class = ExtResource("14_s4k00")

[node name="Unit5" parent="." instance=ExtResource("2_8kbpk")]
position = Vector2(264, 0)
unit_class = ExtResource("15_orexb")

[node name="Enemy" parent="." instance=ExtResource("2_8kbpk")]
position = Vector2(-132, -66)
unit_class = ExtResource("9_4ilro")

[node name="Enemy6" parent="." instance=ExtResource("2_8kbpk")]
position = Vector2(0, -132)
unit_class = ExtResource("9_4ilro")

[node name="Enemy3" parent="." instance=ExtResource("2_8kbpk")]
position = Vector2(-66, -99)
unit_class = ExtResource("9_4ilro")

[node name="Enemy2" parent="." instance=ExtResource("2_8kbpk")]
position = Vector2(-198, -99)
unit_class = ExtResource("13_f25ht")

[node name="Enemy4" parent="." instance=ExtResource("2_8kbpk")]
position = Vector2(-66, -165)
unit_class = ExtResource("13_f25ht")

[node name="Enemy5" parent="." instance=ExtResource("2_8kbpk")]
position = Vector2(-198, -165)
unit_class = ExtResource("16_cleo6")

[node name="Cursor" parent="." instance=ExtResource("11_de1cw")]
unique_name_in_owner = true
location_offset = Vector2(0, -40)
target_offset = Vector2(0, -80)
